ECL 0.9f
========

* Errors fixed:

 - The reader macros for lists, ##, #C, #P and #' did not behave as expected
   when *read-suppress* = t.

 - No comments were allowed between the last list element and the parenthesis
   in a dotted lists. In other words, this:
	(1 . 2 ;; just a comment
	)
   produced an error.

 - All strings in a pathname must be valid C strings, with a null terminating
   character and no fill pointer.

 - "+nan" is no longer parsed as a number.

 - Where available, ECL now uses _setjmp/_longjmp for control structures. These
   functions are faster, as they do not save signals.

 - (EXPT 10.0l0 308) failed because the routine EXPT computed too many powers
   of 10.0l0, some of which (in particular 10^512) were not required and
   overflowed the machine accuracy.

 - make_stream_from_fd() did not accept smm_io.

 - Fixed the optimizer for slot access, which now only operates if the
   variables have been declared of type STANDARD-OBJECT.

 - Pipes are now opened in character mode (M. Pasternacki)

 - (DOCUMENTATION 'F 'FUNCTION) did not work with generic functions.

 - ADJUST-ARRAY did not work with strings.

 - DEFMACRO admits again lambda lists of the form (a . b).

* Compiler errors:

 - In compiled code, discarded (VALUES ...) forms did not trigger all the
   required unwinding forms, so that (TAGBODY (CATCH 'FOO (VALUES 0))) produced
   wrong code.

 - In compiled code, the init-form for keyword and optional arguments could
   reference the variable that it was going to initialize, as in
	(LAMBDA (&OPTIONAL (FOO (1+ FOO))) ...)

 - Globals declared with DEFPARAMETER toplevel forms were not recognized by
   the compiler as special variables.

 - The code for handling closure variables has been changed and now encloses
   the whole of the function in a C block.

 - Values of MOST-POSTIVE-LONG-FLOAT, and similar constants, are now taken from
   the float.h header, instead of referencing the lisp variables themselves.
